upgrade-tests/require-run-as-nonroot/.chainsaw-test/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  labels:
    app: nginx
spec:
  containers:
  - name: bad-container
    image: nginx:latest
