upgrade-tests/require-run-as-nonroot/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  labels:
    app: nginx
spec:
  containers:
  - name: good-container
    image: nginx:latest
    securityContext:
      runAsNonRoot: true
