upgrade-tests/require-run-as-nonroot/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: require-run-as-nonroot
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../require-run-as-nonroot.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: require-run-as-nonroot
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: good-pod.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
